# Vigla

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  about.toml  deny.toml  llms-full.txt  llms.txt  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
app/src-tauri/: Cargo.toml  Entitlements.plist  README.md  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: inbox_commands.rs  lib.rs  main.rs  memory_commands.rs  mission_history_command.rs  playbook_store.rs  runtime_state.rs
crates/adapters/antigravity/: Cargo.toml  README.md
crates/adapters/antigravity/src/: lib.rs
crates/adapters/claude/: Cargo.toml  README.md
crates/adapters/claude/src/: lib.rs
crates/adapters/claude/tests/: conformance.rs  from_fixture.rs
crates/adapters/conformance/: Cargo.toml  README.md
crates/adapters/conformance/src/: lib.rs
crates/adapters/copilot/: Cargo.toml  README.md
crates/adapters/copilot/src/: lib.rs
crates/adapters/core/: Cargo.toml  README.md
crates/adapters/core/src/: core.rs  lib.rs  memory_intent.rs  quota_signal.rs  raw_log_adapter.rs
crates/adapters/gemini/: Cargo.toml  README.md
crates/adapters/gemini/src/: lib.rs
crates/adapters/gemini/tests/: from_fixture.rs
crates/adapters/kiro/: Cargo.toml  README.md
crates/adapters/kiro/src/: lib.rs
crates/adapters/supervisor/: Cargo.toml  README.md
crates/adapters/supervisor/src/: evals.rs  lib.rs  playbook.md  worker_playbook.md
crates/event-schema/: Cargo.toml  README.md
crates/event-schema/src/: lib.rs  memory.rs  time.rs
crates/event-schema/tests/: aider_removed.rs  round_trip.rs
crates/mock-harness/: Cargo.toml  README.md
crates/mock-harness/src/: lib.rs  main.rs  scripts.rs  time.rs
crates/mock-harness/tests/: binary.rs  scripts.rs
crates/orchestrator/: .gitignore  Cargo.toml  README.md
crates/orchestrator/benches/arbiter/: decide_p99.rs
crates/orchestrator/benches/audit/: p50.rs
crates/orchestrator/benches/integration/: rebase_p50.rs
crates/orchestrator/benches/memory/: baselines.json  composer.rs  ratify.rs  scanner.rs  scoring.rs  witnesses.rs
crates/orchestrator/benches/recovery/: classify_p99.rs
crates/orchestrator/benches/task_graph/: scheduler_step_p99.rs
crates/orchestrator/migrations/: 0001_init.sql  0002_resume_metadata.sql  0003_memory_kernel.sql  0004_memory_witnesses.sql  0005_memory_witness_uniqueness.sql  0006_event_retention.sql  0007_audit_history.sql  0008_snapshot_retention.sql  0009_quota_state.sql  0010_memory_handoffs.sql  0011_audit_reports_composite_index.sql  0012_memory_note_title.sql  0013_memory_note_embeddings.sql  0014_audit_reports_dedupe_mission_level.sql  0015_mission_outcomes.sql  0016_memory_bundle_mission_scope.sql  0017_mission_outcomes_repo_root.sql  0018_mission_disposition_journal.sql  0019_repo_scoped_compaction.sql  0020_mission_artifact_cleanup.sql
crates/orchestrator/resources/vendor_profiles/: README.md  antigravity.json  claude.json  codex.json  copilot.json  gemini.json  kiro.json
crates/orchestrator/src/: ephemeral_context.rs  error.rs  host_services.rs  ids.rs  lib.rs  mission.rs  mission_runtime.rs  mission_supervisor_run.rs  mission_worker_dispatch.rs  mock_worker.rs  parser.rs  process_tree.rs  retention.rs  supervisor.rs  vendor_profile.rs
crates/orchestrator/src/acl/: README.md  check.rs  file_acl.rs  mod.rs  sentinel.rs
crates/orchestrator/src/arbiter/: README.md  bound.rs  context.rs  decision.rs  mod.rs  plan_envelope_check.rs  policy.rs  quality_check.rs  rework.rs  rework_dispatch.rs  risk_check.rs  scope_check.rs
crates/orchestrator/src/audit/: README.md  composite.rs  lint.rs  mod.rs  persist.rs  process.rs  project.rs  regression.rs  report.rs  scope.rs  security.rs  test_pass.rs  tier.rs
crates/orchestrator/src/endurance/: heartbeat.rs  metrics.rs  mod.rs  stall.rs
crates/orchestrator/src/escalation/: README.md  mod.rs  visibility.rs
crates/orchestrator/src/judgment/: README.md  assemble.rs  doc_coverage.rs  mod.rs  risk_band.rs  unresolved.rs  verdict.rs
crates/orchestrator/src/memory/: adapter.rs  archive.rs  attach.rs  coherence.rs  composer.rs  context_match.rs  error.rs  handoff.rs  hierarchy.rs  ids.rs  intent_router.rs  intent_sink.rs  mod.rs  policy.rs  reflection.rs  registry.rs  scanner.rs  scoring.rs  store.rs  witnesses.rs
crates/orchestrator/src/mission_event/: mod.rs  plan_envelope.rs
crates/orchestrator/src/mission_runtime/: boundary.rs  event_bus.rs  mock.rs  support.rs  tests.rs
crates/orchestrator/src/mission_supervisor_run/: driver.rs  mission_loop.rs  prompts.rs  run_task.rs  scripted_fixtures.rs  support.rs  tests.rs  worker_pass.rs
crates/orchestrator/src/mission_workspace/: README.md  merge.rs  mod.rs  retention.rs  revert.rs
crates/orchestrator/src/recovery/: README.md  classify.rs  history.rs  mod.rs  policy.rs  quota.rs  scope_drift.rs  types.rs  wakeup.rs
crates/orchestrator/src/repository/: mod.rs  (+6 more)
crates/orchestrator/tests/: acl_gate.rs  adapter_coordination.rs  arbiter_decide.rs  audit_cli.rs  audit_smoke.rs  completion_verdict_e2e.rs  conflict_shapes.rs  coordination.rs  dag_validation_e2e.rs  endurance_shared_monitor.rs  endurance_soak.rs  escalation_visibility.rs  l1_substitutes.rs  launch_recovery_receipt.rs  memory_e2e.rs  memory_props.proptest-regressions  memory_props.rs  memory_replay.rs  memory_retrieval_evaluation.rs  migration_upgrade.rs  multi_worker.rs  no_sql_outside_orchestrator.rs  parser.rs  persistence.rs  quota_observation_mission_template.rs  real_antigravity_run.rs  real_claude_gate.rs  real_codex_run.rs  recovery_injected_failures.rs  recovery_quota_e2e.rs  recovery_unit.rs  revert_mission.rs  rework_dispatch.rs  rework_reassign_e2e.rs  run_task_integration.rs  scale.rs  sink_backpressure.rs  spawn_mock.rs  split_execution_e2e.rs  supervise_stop.rs  (+4 more)
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: main.rs
(+348 files in other folders)
