[package]
name = "vigla-event-schema"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Vigla canonical worker event schema (envelope + payload types)"

[lib]
name = "event_schema"

[dependencies]
serde = { workspace = true }
# `serde_json::Value` is used as the open-schema escape hatch in the
# memory event composer trace (V3 §1.3). Promoted from dev-deps to
# runtime in P0 of the Memory Kernel.
serde_json = { workspace = true }
specta = { workspace = true }
