[package]
name = "vigla-orchestrator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Vigla orchestrator: process supervision and event normalization"

[lib]
name = "orchestrator"
crate-type = ["rlib"]

[features]
# Phase 0 (memory hybrid retrieval): gates the evaluation harness at
# `tests/memory_retrieval_evaluation.rs`. The harness is heavyweight
# (loads 20 fixtures + 30 golden queries) and we don't want it in the
# default CI loop until the V1.1 BM25 backend can sustain the metric
# targets. Run with:
#   cargo test --features retrieval-evaluation \
#     -p vigla-orchestrator --test memory_retrieval_evaluation \
#     -- --nocapture
retrieval-evaluation = []

# Phase 2 (V1.2): gates the local embedding backend. `fastembed`
# transitively pulls `ort` (ONNX Runtime) + the `tokenizers` crate +
# the sentence-transformers model registry. Off by default so the
# vanilla `cargo build` / DMG path stays light. Enable with:
#   cargo build --features embeddings
# The smoke test `memory::retrieval::embed::smoke_test_embed` is
# only compiled when this feature is on.
embeddings = ["dep:fastembed", "dep:dirs"]

[dependencies]
adapter-core = { package = "vigla-adapter-core", path = "../adapters/core" }
blake3 = { workspace = true }
futures = { workspace = true }
zstd = { workspace = true }
claude-adapter = { package = "vigla-adapter-claude", path = "../adapters/claude" }
codex-adapter = { package = "vigla-adapter-codex", path = "../adapters/codex" }
gemini-adapter = { package = "vigla-adapter-gemini", path = "../adapters/gemini" }
antigravity-adapter = { package = "vigla-adapter-antigravity", path = "../adapters/antigravity" }
kiro-adapter = { package = "vigla-adapter-kiro", path = "../adapters/kiro" }
copilot-adapter = { package = "vigla-adapter-copilot", path = "../adapters/copilot" }
supervisor-adapter = { package = "vigla-adapter-supervisor", path = "../adapters/supervisor" }
event-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
libc = "0.2"
fastembed = { version = "5", optional = true }
dirs = { version = "5", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.5"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[[bench]]
name = "memory_scanner"
path = "benches/memory/scanner.rs"
harness = false

[[bench]]
name = "memory_scoring"
path = "benches/memory/scoring.rs"
harness = false

[[bench]]
name = "memory_witnesses"
path = "benches/memory/witnesses.rs"
harness = false

[[bench]]
name = "memory_ratify"
path = "benches/memory/ratify.rs"
harness = false

[[bench]]
name = "memory_composer"
path = "benches/memory/composer.rs"
harness = false

[[bench]]
name = "audit_p50"
path = "benches/audit/p50.rs"
harness = false

[[bench]]
name = "decide_p99"
path = "benches/arbiter/decide_p99.rs"
harness = false

[[bench]]
name = "rebase_p50"
path = "benches/integration/rebase_p50.rs"
harness = false

[[bench]]
name = "recovery_classify_p99"
path = "benches/recovery/classify_p99.rs"
harness = false

[[bench]]
name = "task_graph_scheduler"
path = "benches/task_graph/scheduler_step_p99.rs"
harness = false

[[bin]]
name = "orchestrator_audit"
path = "src/bin/orchestrator_audit.rs"
