[package]
name = "vigla-adapter-antigravity"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true
description = "Vigla adapter for the Antigravity CLI's line-oriented output."

[lib]
name = "antigravity_adapter"
crate-type = ["rlib"]

[dependencies]
adapter-core = { package = "vigla-adapter-core", path = "../core" }
event-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
