[package]
name = "vigla-adapter-claude"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Vigla adapter for Anthropic's Claude Code CLI (stream-json output)."

[lib]
name = "claude_adapter"
crate-type = ["rlib"]

[dependencies]
adapter-core = { package = "vigla-adapter-core", path = "../core" }
event-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
adapter-conformance = { package = "vigla-adapter-conformance", path = "../conformance" }
