[package]
name = "vigla-adapter-conformance"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Golden-transcript conformance harness for Vigla vendor adapters."

[lib]
name = "adapter_conformance"
crate-type = ["rlib"]

[dependencies]
adapter-core = { package = "vigla-adapter-core", path = "../core" }
event-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
