[package]
name = "vigla-adapter-gemini"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Vigla adapter for Google's Gemini CLI (stream-json output)."

[lib]
name = "gemini_adapter"
crate-type = ["rlib"]

[dependencies]
adapter-core = { package = "vigla-adapter-core", path = "../core" }
event-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
