[package]
name = "vigla-adapter-supervisor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish.workspace = true
description = "Vigla mission supervisor adapter — parses `claude -p` stream-json into SupervisorIntent values."

[lib]
name = "supervisor_adapter"
crate-type = ["rlib"]

[dependencies]
adapter-core = { package = "vigla-adapter-core", path = "../core" }
event-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
